Mon Feb 12 18:30:26 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/FEATURES libxslt/transform.c: added support for
	  disable-output-escaping in xsl:copy-of
	* xmlspec/Makefile.am libxslt/variables.c libxslt/transform.c:
	  give more debugging info

Sun Feb 11 21:08:35 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/documents.[ch] libxslt/functions.c libxslt/imports.c
	  libxslt/xslt.c libxslt/xsltInternals.h: changed teh way to store
	  Includes, more document changes
	* libxslt/xsltutils.c: fix the output of doctype and what is or
	  is not HTML
	* tests/REC/*.out tests/REC2/html.xml : changed output accordingly
	* tests/Makefile.am tests/documents/* : added a new test from Stric
	  exercising document() among other things

Sun Feb 11 17:24:03 CET 2001 Bjorn Reese <breese@users.sourceforge.net>

	* FEATURES libxslt/transform.c libxslt/numbers.c: partial support
	  for the level attribute for xsl:number
	* libxslt/numbers.c: internal restructuring

Fri Feb  9 15:49:19 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/Makefile.am libxslt/documents.[ch]: added a new module
	  to deal with documents
	* libxslt/functions.c: fixed document() to return the same set
	  for teh same URL
	* libxslt/keys.[ch] libxslt/templates.c libxslt/transform.c
	  libxslt/variables.c libxslt/xsltInternals.h: keys are really
	  associated to loaded documents, not to the transformation
	  context, made the change, this impacted a number of modules

Thu Feb  8 12:51:00 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* doc/libxslt.sgml doc/html/*.html: updated and rebuilt the doc list

Thu Feb  8 12:36:23 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* README configure.in libxslt.spec.in: bumped to 0.1.0, getting
	  ready for the release
	* libxslt/keys.c libxslt/xslt.c: cleanup of uninitialized vars
	* tests/REC1/Makefile.am tests/REC/Makefile.am: the EXTRA list
	  was not up to date
