@@ -92,6 +92,9 @@ int		xsltSaveResultToFile		(FILE *file,
 int		xsltSaveResultToFd		(int fd,
 						 xmlDocPtr result,
 						 xsltStylesheetPtr style);
+
+void		xsltDebug			(xsltTransformContextPtr ctxt,
+						 xmlNodePtr node);
 #ifdef __cplusplus
 }
 #endif
